# spec-kit-tw

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  VERSION_HISTORY.md  plan.md  pyproject.toml  spec-driven.md
.claude/: settings.local.json
.claude/commands/: translation-review.md
.github/workflows/: docs.yml  release.yml
.github/workflows/scripts/: create-github-release.sh  create-release-packages.sh  get-next-version.sh
docs/: README.md  docfx.json  index.md  installation.md  local-development.md  quickstart.md
memory/: constitution.md  constitution_update_checklist.md
scripts/bash/: update-agent-context.sh
scripts/powershell/: update-agent-context.ps1
src/specify_cli/: __init__.py
templates/: agent-file-template.md  checklist-template.md  plan-template.md  spec-template.md  tasks-template.md
templates/commands/: analyze.md  checklist.md  clarify.md  constitution.md  implement.md  plan.md  specify.md  tasks.md  taskstoissues.md
