[project]
name = "specify-tw-cli"
version = "0.0.90"
description = "Specify TW CLI, part of GitHub Spec Kit TW. A tool to bootstrap your projects for Spec-Driven Development (SDD). Corresponds to upstream spec-kit v0.0.90."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Minidoracat", email = "minidoracat@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "httpx[socks]",
    "platformdirs",
    "readchar",
    "truststore>=0.10.4",
]

[project.urls]
Homepage = "https://github.com/Minidoracat/spec-kit-tw"
Repository = "https://github.com/Minidoracat/spec-kit-tw"
Issues = "https://github.com/Minidoracat/spec-kit-tw/issues"

[project.scripts]
specify-tw = "specify_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/specify_cli"]